--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -21,7 +21,9 @@
         <nav class="menu">                                                                   
             <ul id="main_menu">
                 <li><a {ifCurrent default} class="selected" {/ifCurrent} n:href="default">HOME</a></li>
+                    <li><a {ifCurrent faq} class="selected" {/ifCurrent} n:href="faq">FAQ</a></li>
                  <li><a {ifCurrent program} class="selected" {/ifCurrent} n:href="program">PROGRAM</a></li>
+                 <li><a {ifCurrent accommodation} class="selected" {/ifCurrent} n:href="accommodation">UBYTOVÁNÍ</a></li>
                  <li><a {ifCurrent photo} class="selected" {/ifCurrent} n:href="photo">FOTO</a></li>
                  <li><a {ifCurrent contact} class="selected" {/ifCurrent} n:href="contact">KONTAKT</a></li>
                     <li><a {ifCurrent contact} class="selected" {/ifCurrent} n:href="Sign:out">odhlasit</a></li>
