--- a/app/presenters/templates/Homepage/contact.latte
+++ b/app/presenters/templates/Homepage/contact.latte
@@ -93,7 +93,7 @@ return false;
 <div class="page_header_photo contact_header">
       <div class="page_header_trans">
                <div class="page_header_title">
-               <h1>KONTAKT/h1>
+               <h1>KONTAKT</h1>
 <p>Cokoliv si přejete vědět, nebojte se zeptat</p>
                <div class="contact_email"><a href="#">ourlovelyemail@weddingwebsite.com</a></div>
                </div>
