--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -27,53 +27,49 @@
         <div class="left1">
             <h6>Dostal jsem pozvánku na Vaši svatbu. Co mám dělat?</h6>
             <p>
-                S většinou  Vás se vídáme tak víme kdo přijde. U ostatních prosíme o potvrzení je jedno jak. Sms, telefon, email, facebook....
+                Přijít! S většinou  Vás se vídáme, tak víme kdo přijde. U ostatních prosíme o potvrzení, je jedno jak. Sms, telefon, email, facebook....
                 <br>No a pak jen sebou dobrou náladu a chuť se bavit :-)
             </p>
         </div>
         <div class="left1">
             <h6>Nedostal jsem pozvánku. Co mám dělat?</h6>
-            <p>Tak jak je možné že tohle čteš? :-) Svatba je věc veřejná a nikomu není možno bránit se přijít podívat na obřad. Rádi přivítáme každého.</p>
+            <p>Tak jak je možné že tohle čteš? :-) Svatba je věc veřejná a nikomu není možno bránit se přijít podívat na obřad...</p>
         </div>  
-
+        <div class="left1">
+            <h6>Copak bych jim asi tak koupil za dar.</h6>
+            <p>Všechno máme :-) Náš byt je malý a nic se nám do něj nevejde. Pokud nám přeci jen chcete něco darovat, uvítáme finanční dary.</p>
+        </div>  
         <div class="left1">
             <h6>Stojím před skříní a nevím co si vzít na sebe. Prdim na to a beru šortky.</h6>
-            <p>No to snad ne! Přeci nechceš, aby si na tebe každý ukazoval. Ano zažili jsme různá pekla v podobě křiklavě oranžových triček 
+            <p>No tak na to teda zapomeň! Přeci nechceš, aby si na tebe každý ukazoval. Ano zažili jsme různá pekla na různých svatbách v podobě křiklavě oranžových triček, ponožek v sandálech 
                 a motorkářškých kombinéz. Pomožte nám, ať se historie neopakuje. Díky</p>
+            <p><a href="https://www.google.cz/search?q=wedding+dress+code&espv=2&biw=1920&bih=1075&source=lnms&tbm=isch&sa=X&ei=5s6KVcjjI4PwUNbYoIgE&ved=0CAYQ_AUoAQ">Zde</a> je k nalezení mnoho inspirace.</p>
         </div> 
-
         <div class="left1">
             <h6>Pohoda. Vhodné oblečení jsme přeci jen našel. No ale jak se mám dostat do takových končin?</h6>
-            <p>Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a></p>
-            <p>Vše bude dostatečně značeno.</p>
-            <p>Automobil zaparkujete na místním parkovišti.</p>
+            <p>Zase tak daleko to není. Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a>. Vše bude dostatečně značeno. Automobil zaparkujete na místním parkovišti.</p>
         </div> 
-
         <div class="left1">
             <h6>Je 5.9.2015, 14:30 a jsem tady.</h6>
-            <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde.<br>
-                Následující program je <a n:href="program">tady</a></p>
+            <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a></p>
         </div>  
-
-
-
         <div class="left14_first">
             <h6>Kdo fotí?</h6>
             <p>Fotograf <a href="http://bilacerna.cz/cs">Ondra Vala</a>. Zažil jsem ho na dvou svatbách a viděl z nich vždy parádní fotky :-)</p>
         </div> 
         <div class="left14">
             <h6>Kdo hraje?</h6>
-            <p><a href="http://www.djsagency.cz/">DJ</a>. Pokud budete chtít něco zahrát na přání, není to problém. Tímto bych poprosil Máru a Krikriho a jejich kytary - kdyby něco :-)</p> 
+            <p><a href="http://www.djsagency.cz/">DJ</a>. Pokud budete chtít něco zahrát na přání, není to problém. Tímto bych poprosil Máru a Krikriho a jejich kytary - kdyby něco :-). DJ hraje do 03:00 a pak dle nálady...</p> 
         </div>    
         <div class="left14">
             <h6>Kdo vaří a co vaří?</h6>
-            <p><Probíhá výběr</p>
-                <p>Bude probíhat bohatý raut po celou dobu akce.</p>
+            <p>Probíhá výběr</p>
+            <p>Bude bohatý raut po celou dobu akce.</p>
         </div> 
         <div class="left14_last">
             <h6>Kdo točí a co teče?</h6>
-            <p><Probíhá výběr</p>
-                <p>České pivo. Moravské víno a destiláty. Nealko a další nápoje.</p>
+            <p>Probíhá výběr</p>
+            <p>České pivo. Moravské víno a destiláty. Nealko a další nápoje.</p>
         </div> 
         <div class="clear"></div>
         <div class="left1">
@@ -81,12 +77,10 @@
             <p>Stačí vyhledat rozvoz a domluvit se s ním.</p>
             <p>Co se týče ubytování tak info je <a href="accommodation">zde</a>.</p>
         </div> 
-
-
+        <div class="left1">
+            <h6>Už jsem na odchodu a ještě nemám výslužku.</h6>
+            <p>Tak to ses asi nerozloučil, jinak bys jí dostal :-)</p>
+        </div>  
         <div class="clear"></div>
     </div>  <!--end of full width-->
-</div> <!--end of about content-->   
-
-
-
-
+</div> <!--end of about content-->  
