--- a/app/presenters/templates/Homepage/contact.latte
+++ b/app/presenters/templates/Homepage/contact.latte
@@ -97,7 +97,7 @@
         <div class="page_header_title">
             <h1>KONTAKT</h1>
             <p>Cokoliv si přejete vědět, nebojte se zeptat</p>
-            <div class="contact_email"><a href="#">ourlovelyemail@weddingwebsite.com</a></div>
+            <div class="contact_email"><a href="#">svatba@batkovi.com</a></div>
         </div>
     </div>
 </div>
