--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -93,8 +93,8 @@
                         </div>
                         <div class="about_pic"><img src="images/nevesta.jpg" alt="" title="" /></div>
                     </div>
-                    <a href="#" class="thumb_read_more">MORE ABOUT JENIFER</a>
-                    <p>Love is friendship that has caught fire. It is quiet understanding, mutual confidence, <a href="#">sharing and forgiving</a>. It is loyalty through good and bad times. It settles for less than perfection and <strong>makes allowances</strong> for human weaknesses "<a href="#">LOVE QUOTE</a>":</p>
+                  
+                    <p>Šárka a její první videohra.</p>
                     <span class="love_quote">Sometimes the heart sees what is invisible to the eye.</span>
 
                 </div>
