--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -71,9 +71,9 @@
             </div>
         </div>
         <div class="countdown_container">
-            <h2 class="centered_title">Countdown to Wedding Ceremony</h2>
+            <h2 class="centered_title">Už zbývá jen</h2>
             <div id="defaultCountdown"></div>
-            <div class="rsvp_button"><span class="swirl_left_small"><span class="swirl_right_small"><a href="#">RSVP</a></span></span></div>
+         {*   <div class="rsvp_button"><span class="swirl_left_small"><span class="swirl_right_small"><a href="#">RSVP</a></span></span></div> *}
         </div>
 
         <div class="about_content">
@@ -123,16 +123,19 @@
             <div class="carousel_container_image">
                 <div class="full_width_carousel">
                     <h2>NAŠI SVĚDCI</h2>
-                    <span class="carousel_titles">BEST MAN &amp; MAID OF HONOR</span>
+                    <span class="carousel_titles">SVĚDEK &amp; SVĚDKYNĚ</span>
                     <div id="weddingcarousel" class="owl-carousel">
-                        <div class="left14"><div class="bestman"><span>BEST MAN</span><img src="images/bestman.png" alt="" title="" /></div><img src="images/svedek.jpg" alt="" title="" /><h3>KAREL KOKAISL</h3></div>
-                        <div class="left14"><div class="bestman"><span>MAID OF HONOR</span><img src="images/maidofhonor.png" alt="" title="" /></div><img src="images/svedkyne.jpg" alt="" title="" /><h3>PETRA ZEMANOVÁ</h3></div>
-                        <div class="left14"><img src="images/image_14_2.jpg" alt="" title="" /><h3>ELIZABETH LYN</h3></div>
+                        <div class="left14_first"></div>
+                        <div class="left14"><div class="bestman"><span>SVĚDEK</span><img src="images/bestman.png" alt="" title="" /></div><img src="images/svedek.jpg" alt="" title="" /><h3>KAREL KOKAISL</h3></div>
+                        <div class="left14"><div class="bestman"><span>SVĚDKYNĚ</span><img src="images/maidofhonor.png" alt="" title="" /></div><img src="images/svedkyne.jpg" alt="" title="" /><h3>PETRA ZEMANOVÁ</h3></div>
+                        <div class="left14_last"></div>
+                       {* <div class="left14"><img src="images/image_14_2.jpg" alt="" title="" /><h3>ELIZABETH LYN</h3></div>
                         <div class="left14_last"><img src="images/image_14_6.jpg" alt="" title="" /><h3>STEVE KAY</h3></div>
                         <div class="left14"><img src="images/image_14_5.jpg" alt="" title="" /><h3>JOHN DOE</h3></div>
                         <div class="left14"><img src="images/image_14_3.jpg" alt="" title="" /><h3>MAYA ELIOT</h3></div>
                         <div class="left14"><img src="images/image_14_7.jpg" alt="" title="" /><h3>JOHANNA PASCAL</h3></div>
                         <div class="left14_last"><img src="images/image_14_8.jpg" alt="" title="" /><h3>JOHN DOE</h3></div>
+                         *}
                     </div>   
                 </div>
             </div> 
@@ -159,10 +162,10 @@
                 </div>
                 <div class="left13_last">
                     <div class="bottom_icon"><img src="images/icon_gifts.png" alt="" title="" /></div>
-                    <h2>GIFT REGISTRY</h2>
-                    <span class="subtitle">GIVEN FREELY AND OUT OF PURE LOVE</span>
-                    <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit <a href="#">esse quam nihil</a> aspernatur aut odit aut fugit molestiae consequatur, vel illum <strong>qui dolorem</strong> eum fugiat quo voluptas nulla pariatur aspernatur.</p>
-                    <a href="page.html" class="post_read_more">READ MORE</a>
+                    <h2>SVATEBNÍ DARY</h2>
+                    <span class="subtitle">TYP</span>
+                    <p>Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
+                
                 </div>
 
                 <div class="clear"></div>
