--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -16,7 +16,7 @@
 <div class="page_header_photo general_header">
     <div class="page_header_trans">
         <div class="page_header_title">
-            <h1>FAQ</h1>
+            <h1 n:block="title">FAQ</h1>
             <p>Pokud něco nevíte, tak tady najdete odpověď</p>
         </div>
     </div>
