--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -24,32 +24,37 @@
 
 <div class="page_content">
     <div class="full_width_centered">
-        <div class="left1">
+        <div class="left_full">
             <h6>Dostal jsem pozvánku na Vaši svatbu. Co mám dělat?</h6>
             <p>
                 Přijít! S většinou  Vás se vídáme, tak víme kdo přijde. U ostatních prosíme o potvrzení, je jedno jak. Sms, telefon, email, facebook....
                 <br>No a pak jen sebou dobrou náladu a chuť se bavit :-)
             </p>
         </div>
-        <div class="left1">
+        <div class="left_full">
             <h6>Nedostal jsem pozvánku. Co mám dělat?</h6>
             <p>Tak jak je možné že tohle čteš? :-) Svatba je věc veřejná a nikomu není možno bránit se přijít podívat na obřad...</p>
         </div>  
-        <div class="left1">
+        <div class="left_full">
             <h6>Copak bych jim asi tak koupil za dar.</h6>
             <p>Všechno máme :-) Náš byt je malý a nic se nám do něj nevejde. Pokud nám přeci jen chcete něco darovat, uvítáme finanční dary.</p>
         </div>  
-        <div class="left1">
+        <div class="left_full">
             <h6>Stojím před skříní a nevím co si vzít na sebe. Prdim na to a beru šortky.</h6>
             <p>No tak na to teda zapomeň! Přeci nechceš, aby si na tebe každý ukazoval. Ano zažili jsme různá pekla na různých svatbách v podobě křiklavě oranžových triček, ponožek v sandálech 
                 a motorkářškých kombinéz. Pomožte nám, ať se historie neopakuje. Díky</p>
             <p><a href="https://www.google.cz/search?q=wedding+dress+code&espv=2&biw=1920&bih=1075&source=lnms&tbm=isch&sa=X&ei=5s6KVcjjI4PwUNbYoIgE&ved=0CAYQ_AUoAQ">Zde</a> je k nalezení mnoho inspirace.</p>
         </div> 
-        <div class="left1">
+    <div class="left_full">
             <h6>Pohoda. Vhodné oblečení jsme přeci jen našel. No ale jak se mám dostat do takových končin?</h6>
             <p>Zase tak daleko to není. Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a>. Vše bude dostatečně značeno. Automobil zaparkujete na místním parkovišti.</p>
+            <div id="map">
+                  {include map}
+            </div>
+          
         </div> 
-        <div class="left1">
+            
+          <div class="left_full">
             <h6>Je 5.9.2015, 14:30 a jsem tady.</h6>
             <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a></p>
         </div>  
@@ -64,7 +69,7 @@
         <div class="left14">
             <h6>Kdo vaří a co vaří?</h6>
             <p>Probíhá výběr</p>
-            <p>Bude bohatý raut po celou dobu akce.</p>
+            <p>Bude raut po celou dobu akce.</p>
         </div> 
         <div class="left14_last">
             <h6>Kdo točí a co teče?</h6>
@@ -77,10 +82,12 @@
             <p>Stačí vyhledat rozvoz a domluvit se s ním.</p>
             <p>Co se týče ubytování tak info je <a href="accommodation">zde</a>.</p>
         </div> 
-        <div class="left1">
+        <div class="left_full">
             <h6>Už jsem na odchodu a ještě nemám výslužku.</h6>
             <p>Tak to ses asi nerozloučil, jinak bys jí dostal :-)</p>
         </div>  
+        
+       
         <div class="clear"></div>
     </div>  <!--end of full width-->
 </div> <!--end of about content-->  
