--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -70,6 +70,11 @@
                 <div style="background-image: url(./images/slider/slide3.jpg);"></div>                   
             </div>
         </div>
+<div class="countdown_container" style="background-color: red">
+    <p style="color: white; text-align: center">Zatím dáváme vše do kupy a informace budeme aktualizovat. Sledujte nás.</p>
+            
+         {*   <div class="rsvp_button"><span class="swirl_left_small"><span class="swirl_right_small"><a href="#">RSVP</a></span></span></div> *}
+        </div>
         <div class="countdown_container">
             <h2 class="centered_title">Už zbývá jen</h2>
             <div id="defaultCountdown"></div>
@@ -95,7 +100,7 @@
                     </div>
                   
                     <p>Šárka a její první videohra.</p>
-                    <span class="love_quote">Sometimes the heart sees what is invisible to the eye.</span>
+                   
 
                 </div>
                 <div class="left12_last">
@@ -111,7 +116,7 @@
                         <div class="about_pic"><img src="{$basePath}/images/husopaska.jpg" alt="" title="" /></div>
                     </div>
                     
-                    <p>Jmenuji se pavel po otci a husy mám rád od dětství.</p>
+                    <p>Jmenuji se Pavel po otci a husy mám rád od dětství.</p>
                     <span class="love_quote">Gumovky, to je moje.</span>
                 </div>
 
@@ -148,17 +153,17 @@
             <div class="full_width_centered">
                 <div class="left13"> 
                     <div class="bottom_icon"><img src="images/icon_music.png" alt="" title="" /></div>
-                    <h2>BACHELOR PARTY</h2>
-                    <span class="subtitle">BRING YOUR DANCING SHOES</span>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse <strong>cillum dolore</strong> eu fugiat nulla pariat ur si nt oc caecat non proident, sunt in culpa <a href="#">qui officia</a> deserunt mollit anim id est laborum sed quia non numquam eius modi.</p>
-                    <a href="page.html" class="post_read_more">READ MORE</a>
+                    <h2>PÁRTY</h2>
+                    <span class="subtitle">DOBRÁ NÁLADA NUTNÁ</span>
+                    <p>Starosti necháme doma. Vemte si dobrou náladu. Osvěžte si taneční krok a jdeme na to...</p>
+                    
                 </div>
                 <div class="left13">
                     <div class="bottom_icon"><img src="images/icon_location.png" alt="" title="" /></div>
                     <h2>MÍSTO SVATBY</h2>
                     <span class="subtitle">FARMA MOULISOVÝCH - MILÍNOV 23</span>
                     <p><a href="http://www.farmamoulisovych.cz/">Místo</a> bude označeno cedulí a nedá se nenajít. Pokud byl i přesto problém - <a n:href="contact">volejte naše operátory</a> </p>
-                    <a href="page.html" class="post_read_more">READ MORE</a>
+                  
                 </div>
                 <div class="left13_last">
                     <div class="bottom_icon"><img src="images/icon_gifts.png" alt="" title="" /></div>
