--- a/app/presenters/templates/Sign/in.latte
+++ b/app/presenters/templates/Sign/in.latte
@@ -36,7 +36,7 @@
                 <div class="left13">
 
 
-                    <input type="text" class="form_input required" n:name=password name="password" id="contactname" placeholder="heslo"/>
+                    <input type="password" class="form_input required" n:name=password name="password" id="contactname" placeholder="heslo"/>
                     <center>
                         
                         <input  n:name=submit type="submit" name="submit" class="form_submit_contact" id="submit" value="Vstoupit" />
