--- a/app/presenters/templates/Sign/in.latte
+++ b/app/presenters/templates/Sign/in.latte
@@ -10,7 +10,7 @@
     <meta name="author" content="FamousThemes" />
     <meta name="description" content="Get in the spotlight" />
     <meta name="keywords" content="premium css templates, premium wordpress themes, famous themes, themeforest" />
-    <title>Wedding Bells | Batkovi.com</title>
+    <title>Batkovi.com</title>
     <link rel="stylesheet" type="text/css" media="all" href="{$basePath}/style.css" />
     <link rel="stylesheet" type="text/css" media="all" href="{$basePath}/colors/green.css" />
     <link rel="stylesheet" href="{$basePath}/css/carousel.css">
