--- a/app/presenters/templates/Homepage/photo.latte
+++ b/app/presenters/templates/Homepage/photo.latte
@@ -1,53 +1,9 @@
 {block script}
 <!-- jQuery -->
 <script type="text/javascript" src="{$basePath}/js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="{$basePath}js/effects.js"></script>
-<script type="text/javascript" src="{$basePath}js/jquery.stapel.js"></script>
-<script type="text/javascript">
-    $(function () {
-        "use strict";
-        var $grid = $('#tp-grid'),
-                $name = $('#name'),
-                $close = $('#close'),
-                $loader = $('<div class="loader"><i></i><i></i><i></i><i></i><i></i><i></i><span>Loading...</span></div>').insertBefore($grid),
-                stapel = $grid.stapel({
-                    onLoad: function () {
-                        $loader.remove();
-                    },
-                    onBeforeOpen: function (pileName) {
-                        $name.html(pileName);
-                    },
-                    onAfterOpen: function (pileName) {
-                        $close.show();
-                    }
-                });
 
-        $close.on('click', function () {
-            $close.hide();
-            $name.empty();
-            stapel.closePile();
-        });
-
-    });
-</script>
-<script type="text/javascript" src="{$basePath}js/jquery.swipebox.js"></script>
-
-<!-- DropDownMenu -->
-<script type="text/javascript" src="{$basePath}js/menu.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var $ = jQuery.noConflict();
-    $(window).load(function () {
-        $(function () {
-            "use strict";
-            $(".swipebox").swipebox();
-        });
-    });
-</script>
-<script type="text/javascript">
-    var main_menu = new main_menu.dd("main_menu");
-    main_menu.init("main_menu", "menuhover");
-</script>
-
+<script src="{$basePath}/js/lightbox.js"></script>
+<link href="{$basePath}/css/lightbox.css" rel="stylesheet">
 {/block}
 
 {block content}   <div class="page_header_photo general_header">
@@ -61,10 +17,18 @@
 
 <div class="page_content">
     <div class="full_width_centered">
-        <div class="wrapper">
-            <p>Zatím tu nic není. Ale budeme rádi, pokud nám poskytnete jakoukoliv fotku.</p>
-        </div>  
-
+      
+        Zde můžete uploadovat fotky přímo z mobilu :-) Díky za každou fotku. <br><br>
+{control formPhoto}
+<hr>
+{foreach $photos as $k => $v}
+  
+    <a href="{$basePath}/{str_replace("data/photo/thumb/","data/photo/original/",$k)}" data-lightbox="roadtrip"><img style="max-height: 250px; max-width: 250px; float: left" src="{$basePath}/{$v}"></a>
+    {/foreach}
         <div class="clear"></div>
     </div>  <!--end of full width-->
 </div> <!--end of about content-->
+
+
+
+
