--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -17,7 +17,7 @@
     <div class="page_header_trans">
         <div class="page_header_title">
             <h1 n:block="title">FAQ</h1>
-            <p>Pokud něco nevíte, tak tady najdete odpověď</p>
+            <p>Pokud něco nevíte, tak tady najdete odpověď. Budem postupně doplňovat.</p>
         </div>
     </div>
 </div>
@@ -37,7 +37,7 @@
         </div>  
         <div class="left_full">
             <h6>Copak bych jim asi tak koupil za dar.</h6>
-            <p>Všechno máme :-) Náš byt je malý a nic se nám do něj nevejde. Pokud nám přeci jen chcete něco darovat, uvítáme finanční dary.</p>
+            <p>Dlouho jsme hledali, až jsme našli takovou krásnou básničku: Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
         </div>  
         <div class="left_full">
             <h6>Stojím před skříní a nevím co si vzít na sebe. Prdim na to a beru šortky.</h6>
@@ -56,7 +56,7 @@
             
           <div class="left_full">
             <h6>Je 5.9.2015, 14:30 a jsem tady.</h6>
-            <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a></p>
+            <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a>. Za hodinu to vypukne.</p>
         </div>  
         <div class="left14_first">
             <h6>Kdo fotí?</h6>
