--- a/app/presenters/templates/Homepage/program.latte
+++ b/app/presenters/templates/Homepage/program.latte
@@ -42,7 +42,7 @@ Pro mého dědu a ty co přijdou s potomkem je na farmě dostatek dobytka k obdi
     <div class="left12_first">
         <h2>16:30 - Poobřadní část</h2>
 <p>Ihned po obředu bude pro všechny pozvané hosty připraven raut formou švédských stolů. Během této části, probehnou klasické tance 
-všech možných kombinací...Házení květiny...Stahování povazku a jeho střelba a další podobné akce. A samožejmě dojde i na tradiční krájení drotu.</p>
+všech možných kombinací...Házení květiny...Stahování podvazku a jeho střelba, proslovy, děkovačky a další podobné akce. A samožejmě dojde i na tradiční krájení drotu.</p>
     </div>  
     
     <div class="left12_last">
