--- a/app/presenters/templates/Homepage/accommodation.latte
+++ b/app/presenters/templates/Homepage/accommodation.latte
@@ -34,7 +34,8 @@
             </ul>
 
             </p>
-            Všechny varianty jsou ve Spáleném Poříčí. Je to 5 kilometrů od místa svatby. Bude zde jezdit rozvoz.
+            Všechny varianty jsou ve Spáleném Poříčí. Je to 5 kilometrů od místa svatby. Bude zde jezdit rozvoz. <br>
+            Samozřejmě je možno si zajistit ubytování kdekoliv jinde, ale prosíme s rozumem co se vzdálenosti týče, kvůli odvozu.
             <p>
 
 
