--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -65,7 +65,7 @@
         <div class="slider_container">
             <div class="slider_trans_black"></div>
             <div id="random">
-                <div style="background-image: url(./images/slider/slide1.jpg);"></div>
+               {* <div style="background-image: url(./images/slider/slide1.jpg);"></div> *}
                 <div style="background-image: url(./images/slider/slide2.jpg);"></div> 
                 <div style="background-image: url(./images/slider/slide3.jpg);"></div>                   
             </div>
@@ -130,10 +130,10 @@
                     <h2>NAŠI SVĚDCI</h2>
                     <span class="carousel_titles">SVĚDEK &amp; SVĚDKYNĚ</span>
                     <div id="weddingcarousel" class="owl-carousel">
-                        <div class="left14_first"></div>
+                     
                         <div class="left14"><div class="bestman"><span>SVĚDEK</span><img src="images/bestman.png" alt="" title="" /></div><img src="images/svedek.jpg" alt="" title="" /><h3>KAREL KOKAISL</h3></div>
                         <div class="left14"><div class="bestman"><span>SVĚDKYNĚ</span><img src="images/maidofhonor.png" alt="" title="" /></div><img src="images/svedkyne.jpg" alt="" title="" /><h3>PETRA ZEMANOVÁ</h3></div>
-                        <div class="left14_last"></div>
+                      
                        {* <div class="left14"><img src="images/image_14_2.jpg" alt="" title="" /><h3>ELIZABETH LYN</h3></div>
                         <div class="left14_last"><img src="images/image_14_6.jpg" alt="" title="" /><h3>STEVE KAY</h3></div>
                         <div class="left14"><img src="images/image_14_5.jpg" alt="" title="" /><h3>JOHN DOE</h3></div>
@@ -169,7 +169,7 @@
                     <div class="bottom_icon"><img src="images/icon_gifts.png" alt="" title="" /></div>
                     <h2>SVATEBNÍ DARY</h2>
                     <span class="subtitle">TYP</span>
-                    <p>Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
+                    <p>Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvek v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
                 
                 </div>
 
