--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -16,7 +16,7 @@
 <div class="page_header_photo general_header">
     <div class="page_header_trans">
         <div class="page_header_title">
-            <h1 n:block="title">FAQ</h1>
+            <h1>FAQ</h1>
             <p>Pokud něco nevíte, tak tady najdete odpověď. Budem postupně doplňovat.</p>
         </div>
     </div>
@@ -27,24 +27,23 @@
         <div class="left_full">
             <h6>Dostal jsem pozvánku na Vaši svatbu. Co mám dělat?</h6>
             <p>
-                Přijít! S většinou  Vás se vídáme, tak víme kdo přijde. U ostatních prosíme o potvrzení, je jedno jak. Sms, telefon, email, facebook....
-                <br>No a pak jen sebou dobrou náladu a chuť se bavit :-)
+                Potvrdit na <a href="mailto:svatba@batkovi.com">svatba@batkovi.com</a> a přijít :-). Prosíme o potvrzení z důvodu objednání dostatečného občerstvení a židlí. Díky
             </p>
         </div>
-        <div class="left_full">
+      {*  <div class="left_full">
             <h6>Nedostal jsem pozvánku. Co mám dělat?</h6>
             <p>Tak jak je možné že tohle čteš? :-) Svatba je věc veřejná a nikomu není možno bránit se přijít podívat na obřad...</p>
-        </div>  
+        </div>
+        *}
         <div class="left_full">
             <h6>Copak bych jim asi tak koupil za dar.</h6>
             <p>Dlouho jsme hledali, až jsme našli takovou krásnou básničku: Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
         </div>  
         <div class="left_full">
-            <h6>Stojím před skříní a nevím co si vzít na sebe. Prdim na to a beru šortky.</h6>
+            <h6>Stojím před skříní a nevím co si vzít na sebe. Nevadí, beru šortky.</h6>
             <p>No tak na to teda zapomeň! Přeci nechceš, aby si na tebe každý ukazoval. Ano zažili jsme různá pekla na různých svatbách v podobě křiklavě oranžových triček, ponožek v sandálech 
                 a motorkářškých kombinéz. Pomožte nám, ať se historie neopakuje. Díky</p>
-            <p><a href="https://www.google.cz/search?q=wedding+dress+code&espv=2&biw=1920&bih=1075&source=lnms&tbm=isch&sa=X&ei=5s6KVcjjI4PwUNbYoIgE&ved=0CAYQ_AUoAQ">Zde</a> je k nalezení mnoho inspirace.</p>
-        </div> 
+                </div> 
     <div class="left_full">
             <h6>Pohoda. Vhodné oblečení jsme přeci jen našel. No ale jak se mám dostat do takových končin?</h6>
             <p>Zase tak daleko to není. Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a>. Vše bude dostatečně značeno. Automobil zaparkujete na místním parkovišti.</p>
@@ -53,7 +52,12 @@
             </div>
           
         </div> 
-            
+               <div class="left_full">
+            <h6>Chci se dostat na svatbu, ale nemám jak nebo chci pít a vím že pak nebudu moci řídit.</h6>
+            <p>Zavolej co nejdříve ženichovi a domluv se s ním. S tímto se počítá a on Ti někoho domluví.</p>
+               
+          
+        </div> 
           <div class="left_full">
             <h6>Je 5.9.2015, 14:30 a jsem tady.</h6>
             <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a>. Za hodinu to vypukne.</p>
@@ -78,14 +82,15 @@
         </div> 
         <div class="clear"></div>
         <div class="left1">
-            <h6>Už jsem si pořádně zatančil, napil a najedl. S novomaželi se pobavil a vytočil všechny případné dámy či pány. Je čas jít na kutě.</h6>
+            <h6>Už jsem si pořádně zatančil, napil a najedl. S novomanželi se pobavil a vytočil všechny případné dámy či pány. Je čas jít na kutě.</h6>
             <p>Stačí vyhledat rozvoz a domluvit se s ním.</p>
             <p>Co se týče ubytování tak info je <a href="accommodation">zde</a>.</p>
         </div> 
-        <div class="left_full">
+        {*<div class="left_full">
             <h6>Už jsem na odchodu a ještě nemám výslužku.</h6>
             <p>Tak to ses asi nerozloučil, jinak bys jí dostal :-)</p>
         </div>  
+          *}
         
        
         <div class="clear"></div>
