--- a/app/presenters/templates/Homepage/program.latte
+++ b/app/presenters/templates/Homepage/program.latte
@@ -28,26 +28,26 @@ Pokud vám něco není jaské, neváhete se zeptat.</p>
         <div class="left1">
         <h2>14:30 - Ideální čas Vašeho příjezdu</h2>
 <p>
-    Nebudem si nic nalhávat, každý se občas opozdí. Zkuste tak neučinit a dorazit včas. Rozhodně se nebudete nudit, bude pro vás
+    Nebudeme si nic nalhávat, každý se občas opozdí. Zkuste tak neučinit a dorazit včas. Rozhodně se nebudete nudit, bude pro vás
  připraven uvítací drink a malé pohoštění. Něž celá sláva začne, tak si popovídáte s lidmi, které jste dlouho neviděli, omrknete terén a celkově se rozkoukáte.
 Pro mého dědu a ty co přijdou s potomkem je na farmě dostatek dobytka k obdivu.
 </p>
     </div>
           <div class="left1">
         <h2>15:30 - Obřad</h2>
-<p>Suchá i mokrá varianta se odherává přímo na statku.</p>
+<p>Suchá i mokrá varianta se odehrává přímo na statku.</p>
     </div>  
     
          
     <div class="left12_first">
         <h2>16:30 - Poobřadní část</h2>
-<p>Ihned po obředu bude pro všechny pozvané hosty připraven raut formou švédských stolů. Během této části, probehnou klasické tance 
-všech možných kombinací...Házení květiny...Stahování podvazku a jeho střelba, proslovy, děkovačky a další podobné akce. A samožejmě dojde i na tradiční krájení drotu.</p>
+<p>Ihned po obřadu bude pro všechny pozvané hosty připraven raut formou švédských stolů. Během této části, proběhnou klasické tance 
+všech možných kombinací...Házení květiny...Stahování podvazku a jeho střelba, proslovy, děkovačky a další podobné akce. A samozřejmě dojde i na tradiční krájení dortu.</p>
     </div>  
     
     <div class="left12_last">
         <h2>20:00 - Veselice</h2>
-        <p>Klasická juchanda až do raních hodin. DJ je objednán do 3:00 ale dle potřeby a našich příhozů je schopen hrát dále :-)
+        <p>Klasická juchanda až do ranních hodin. DJ je objednán do 3:00 ale dle potřeby a našich příhozů je schopen hrát dále :-)
         </p>
     </div>
     
